Fixed canvas overlay visibility

--- a/static/style.css
+++ b/static/style.css
@@ -122,6 +122,15 @@ footer {
     justify-content: center;
     margin-top: 40px;
 }
+#overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    pointer-events: none;
+}
 ;
 
 
